# Master_Thesis

./: README.md  bebop_mpc.m
bebop_mpc_control/bebop_disturbance_observer/: CMakeLists.txt  README.md  package.xml
bebop_mpc_control/bebop_disturbance_observer/cfg/: KFDisturbanceObserver.cfg
bebop_mpc_control/bebop_disturbance_observer/include/bebop_disturbance_observer/: KF_disturbance_observer.h
bebop_mpc_control/bebop_disturbance_observer/resources/: disturbance_observer_ardrone.yaml
bebop_mpc_control/bebop_disturbance_observer/src/: KF_disturbance_observer.cpp
bebop_mpc_control/bebop_linear_mpc/: CMakeLists.txt  README.md  package.xml
bebop_mpc_control/bebop_linear_mpc/cfg/: LinearMPC.cfg
bebop_mpc_control/bebop_linear_mpc/include/bebop_linear_mpc/: linear_mpc.h  linear_mpc_node.h  steady_state_calculation.h
bebop_mpc_control/bebop_linear_mpc/launch/: ardrone_bag_recorder.launch  ardrone_linear_mpc_sim.launch  bebop_bag_recorder.launch  bebop_linear_mpc.launch
bebop_mpc_control/bebop_linear_mpc/resources/: linear_mpc_ardrone.yaml  linear_mpc_bebop.yaml  waypoints_square_10x10.txt  waypoints_zigzag_3d.txt
bebop_mpc_control/bebop_linear_mpc/src/: bebop_attitude_publisher.cpp  bebop_waypoint_publisher.cpp  linear_mpc.cpp  linear_mpc_node.cpp  mpc_queue.cpp  steady_state_calculation.cpp
bebop_mpc_control/bebop_odometry_republisher/: CMakeLists.txt  package.xml
bebop_mpc_control/bebop_odometry_republisher/launch/: bebop_odometry_republisher.launch
bebop_mpc_control/bebop_odometry_republisher/src/: bebop_odometry.cpp
bebop_mpc_control/control_inputs_normalizer/: CMakeLists.txt  package.xml
bebop_mpc_control/control_inputs_normalizer/include/control_inputs_normalizer/: control_inputs_normalizer.h
bebop_mpc_control/control_inputs_normalizer/launch/: control_inputs_normalizer.launch
bebop_mpc_control/control_inputs_normalizer/params/: ardrone_scaling_parameters.yaml  bebop_scaling_parameters.yaml
bebop_mpc_control/control_inputs_normalizer/src/: control_inputs_normalizer.cpp
bebop_mpc_control/errors_publisher/: CMakeLists.txt  README.md  package.xml
bebop_mpc_control/errors_publisher/msg/: StateErrors.msg
bebop_mpc_control/errors_publisher/src/: errors_publisher.cpp
bebop_mpc_control/mpc_traj_viz/: CMakeLists.txt  package.xml
bebop_mpc_control/mpc_traj_viz/include/mpc_traj_viz/: mpc_traj_viz.h
bebop_mpc_control/mpc_traj_viz/launch/: ardrone_mpc_viz.launch  bebop_mpc_viz.launch
bebop_mpc_control/mpc_traj_viz/rviz/: ardrone_config.rviz  bebop_config.rviz
bebop_mpc_control/mpc_traj_viz/src/: mpc_traj_viz.cpp
